added postdocs and edited open positions to be current
added postdocs and edited open positions to be current

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -7724,51 +7724,11 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:28:46Z</date>
+						<date>2018-10-03T21:03:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/medium_109931.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								41/4204vSolp
-								ncfP+f8U4g==
-								</data>
-								<key>Size</key>
-								<integer>163798</integer>
-							</dict>
-							<key>files/medium_109932.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								xO3S13dz2tSB
-								BSMFTN3r1A==
-								</data>
-								<key>Size</key>
-								<integer>20135</integer>
-							</dict>
-							<key>files/medium_109955.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								awWUX/ecvP0d
-								3geqkqj1Bw==
-								</data>
-								<key>Size</key>
-								<integer>31185</integer>
-							</dict>
-							<key>files/medium_110002.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								yqKjmXAuuI/H
-								V55dPXO2oQ==
-								</data>
-								<key>Size</key>
-								<integer>45933</integer>
-							</dict>
 							<key>files/small_109748.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7779,75 +7739,15 @@
 								<key>Size</key>
 								<integer>234406</integer>
 							</dict>
-							<key>files/small_109931.png</key>
+							<key>files/small_110125.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								vr3yhQcAresN
-								a3hPFHddeQ==
+								jthzH9c2934x
+								N77LvExAMw==
 								</data>
 								<key>Size</key>
-								<integer>84396</integer>
-							</dict>
-							<key>files/small_109932.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								0XJ8L5NSMIhc
-								1O42IsHHbA==
-								</data>
-								<key>Size</key>
-								<integer>6955</integer>
-							</dict>
-							<key>files/small_109955.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ttO6QbIwllw0
-								fYKsouCeYw==
-								</data>
-								<key>Size</key>
-								<integer>156890</integer>
-							</dict>
-							<key>files/small_110002.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								zez0SJTWiiyo
-								LfRoSHzf8Q==
-								</data>
-								<key>Size</key>
-								<integer>16393</integer>
-							</dict>
-							<key>files/small_110036.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								UdYh/mIPPRip
-								+ecFCqFBBg==
-								</data>
-								<key>Size</key>
-								<integer>16077</integer>
-							</dict>
-							<key>files/small_110103.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OFRAuYMHQjar
-								WyJELtYtnw==
-								</data>
-								<key>Size</key>
-								<integer>18601</integer>
-							</dict>
-							<key>files/small_110110.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								y4cN4+LpaXE6
-								mfD7Wzs2dw==
-								</data>
-								<key>Size</key>
-								<integer>6918</integer>
+								<integer>306447</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7883,11 +7783,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aRKCYd7IEPOg
-								Xyr00TwYcQ==
+								w9zajQE6svrr
+								QxyRRpLUEA==
 								</data>
 								<key>Size</key>
-								<integer>173297</integer>
+								<integer>116346</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -7903,11 +7803,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								B/KTmCSqevKh
-								Y1BzC0Qiog==
+								oyJsGru99RF9
+								ZozT925Mgg==
 								</data>
 								<key>Size</key>
-								<integer>96633</integer>
+								<integer>49460</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8722,7 +8622,7 @@
 					<key>page68 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:36:04Z</date>
+						<date>2018-10-03T20:53:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8811,11 +8711,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FGChhP8ML+E9
-								hdvB4JDFoQ==
+								5Wd+125KINR6
+								kzIqdRvmEA==
 								</data>
 								<key>Size</key>
-								<integer>143116</integer>
+								<integer>152288</integer>
 							</dict>
 							<key>files/stacks_page_page68.js</key>
 							<dict>
@@ -8831,11 +8731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U7pkwBNBNh9p
-								B4JCpd6cng==
+								Kvm7ELFsA3N2
+								iGDK3S828A==
 								</data>
 								<key>Size</key>
-								<integer>80527</integer>
+								<integer>88892</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9316,7 +9216,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:28:46Z</date>
+						<date>2018-10-03T21:03:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9365,11 +9265,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9UDxk+a7II1
-								8RGu2Xy2Yg==
+								7LuhnPU0t8q8
+								y8Y/LG1oyw==
 								</data>
 								<key>Size</key>
-								<integer>4364</integer>
+								<integer>4428</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9418,7 +9318,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:36:04Z</date>
+						<date>2018-10-03T21:03:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10457,11 +10357,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g0U7vFpNhv9+
-								FnAoyWykOA==
+								udRjYHPL9t+6
+								Sy1/qi4aXQ==
 								</data>
 								<key>Size</key>
-								<integer>3364</integer>
+								<integer>4030</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10561,31 +10461,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCyqNMv
-				qMaAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCyqNMvq8mA
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HAsrMeA0WNgAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCysx4DSPWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10593,9 +10493,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
