--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:36:04Z</date>
+						<date>2018-10-03T20:53:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FGChhP8ML+E9
-								hdvB4JDFoQ==
+								5Wd+125KINR6
+								kzIqdRvmEA==
 								</data>
 								<key>Size</key>
-								<integer>143116</integer>
+								<integer>152288</integer>
 							</dict>
 							<key>files/stacks_page_page68.js</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U7pkwBNBNh9p
-								B4JCpd6cng==
+								Kvm7ELFsA3N2
+								iGDK3S828A==
 								</data>
 								<key>Size</key>
-								<integer>80527</integer>
+								<integer>88892</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
