added eligibility to t32
added eligibility to t32

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7724,7 +7724,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T21:03:52Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7783,8 +7783,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w9zajQE6svrr
-								QxyRRpLUEA==
+								9fiqHdXARE5h
+								dWCrIeuiow==
 								</data>
 								<key>Size</key>
 								<integer>116346</integer>
@@ -7803,11 +7803,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oyJsGru99RF9
-								ZozT925Mgg==
+								5mvxBgg1uEyy
+								zH8Q2Osf+Q==
 								</data>
 								<key>Size</key>
-								<integer>49460</integer>
+								<integer>49573</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8622,7 +8622,7 @@
 					<key>page68 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T20:53:17Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8711,8 +8711,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5Wd+125KINR6
-								kzIqdRvmEA==
+								UhjPkHfgPV6T
+								ASLUdJTb7w==
 								</data>
 								<key>Size</key>
 								<integer>152288</integer>
@@ -8731,11 +8731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Kvm7ELFsA3N2
-								iGDK3S828A==
+								wFJ+tvsrlCPH
+								h0jtKFB4gQ==
 								</data>
 								<key>Size</key>
-								<integer>88892</integer>
+								<integer>89203</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9216,7 +9216,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T21:03:52Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9318,7 +9318,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T21:03:52Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10465,7 +10465,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAsrMeA0WNgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAssoDEmBGgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10476,7 +10476,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCysx4DSPWA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCyygMSYsOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
