--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T20:53:17Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,8 +122,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5Wd+125KINR6
-								kzIqdRvmEA==
+								UhjPkHfgPV6T
+								ASLUdJTb7w==
 								</data>
 								<key>Size</key>
 								<integer>152288</integer>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Kvm7ELFsA3N2
-								iGDK3S828A==
+								wFJ+tvsrlCPH
+								h0jtKFB4gQ==
 								</data>
 								<key>Size</key>
-								<integer>88892</integer>
+								<integer>89203</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
