--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T21:03:52Z</date>
+						<date>2018-10-04T00:19:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w9zajQE6svrr
-								QxyRRpLUEA==
+								9fiqHdXARE5h
+								dWCrIeuiow==
 								</data>
 								<key>Size</key>
 								<integer>116346</integer>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oyJsGru99RF9
-								ZozT925Mgg==
+								5mvxBgg1uEyy
+								zH8Q2Osf+Q==
 								</data>
 								<key>Size</key>
-								<integer>49460</integer>
+								<integer>49573</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
