--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -8768,7 +8768,7 @@
 					<key>page69 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:42:06Z</date>
+						<date>2018-10-05T17:56:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9037,11 +9037,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JE2pZB9YowUQ
-								JN/Ew/ovJw==
+								00vpXsPm9L3G
+								1zSQYwdifw==
 								</data>
 								<key>Size</key>
-								<integer>67834</integer>
+								<integer>67436</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9522,7 +9522,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:42:06Z</date>
+						<date>2018-10-05T17:56:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9571,11 +9571,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HCqjGgomrxYn
-								d8oBc6DeWQ==
+								iajEs8Vgwz1l
+								apvdy9Ciqg==
 								</data>
 								<key>Size</key>
-								<integer>4800</integer>
+								<integer>4448</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9624,7 +9624,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:22:34Z</date>
+						<date>2018-10-05T17:56:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10663,11 +10663,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5yG48o2vcNf
-								6t1Vhwhq8Q==
+								6gwdfJ+57wLU
+								jrpgPtIeGA==
 								</data>
 								<key>Size</key>
-								<integer>4067</integer>
+								<integer>3401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10771,7 +10771,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAs9fhUuDBgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAs+7q+IZigAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10782,7 +10782,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCz1+FS4o+A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCz7ur4iVWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
