--- a/vermontcomplexsystems-foundation.rw/Pages/08-Partner/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-Partner/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:42:06Z</date>
+						<date>2018-10-05T17:56:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -302,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JE2pZB9YowUQ
-								JN/Ew/ovJw==
+								00vpXsPm9L3G
+								1zSQYwdifw==
 								</data>
 								<key>Size</key>
-								<integer>67834</integer>
+								<integer>67436</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
